Dev Tool Addition

--- a/register.html
+++ b/register.html
@@ -61,7 +61,13 @@
                 
             </div>  
             </form>
-        </div>    
+        </div>  
+        <div class="dev__buttons">
+          <a href="index.html"><button>Sign in</button></a>
+          <a href="register.html"><button>Register</button></a>
+          <a href="feed.html"><button>Feed</button></a>
+          <a href="profile.html"><button>Profile</button></a>
+      </div>  
     </div>
 </body>
 </html>
