--- a/index.html
+++ b/index.html
@@ -24,10 +24,16 @@
                 <div class="login__submit">
                     <a href="index.html"><button>Register</button></a>
                     <input type="submit" name="logSubmit" value="Login">
-
                 </div>
             </form>
         </div>    
+        <div class="dev__buttons">
+            <a href="index.html"><button>Sign in</button></a>
+            <a href="register.html"><button>Register</button></a>
+            <a href="feed.html"><button>Feed</button></a>
+            <a href="profile.html"><button>Profile</button></a>
+        </div>
     </div>
+    
 </body>
 </html>
