--- a/profile.html
+++ b/profile.html
@@ -297,6 +297,36 @@
                         </div>
                     </div>
 
+                    <div class="follower__container">
+                        <div class="follower__names">
+                            <img src="images\avatar6.jpg" id="preview__image" class="follower__avatar">
+                            <h1>Jeff Jones</h1>
+                            <p>@J4mieJ0n3ss</p>
+                        </div>
+                        <div class="follower__details">
+                            <h2>7892</h2><p>Followers</p>
+                            <h2>498</h2><p>Following</p>
+                        </div>
+                        <div class="follower__actions">
+                            <button>Profile</button>
+                        </div>
+                    </div>
+
+                    <div class="follower__container">
+                        <div class="follower__names">
+                            <img src="images\avatar6.jpg" id="preview__image" class="follower__avatar">
+                            <h1>Jeff Jones</h1>
+                            <p>@J4mieJ0n3ss</p>
+                        </div>
+                        <div class="follower__details">
+                            <h2>7892</h2><p>Followers</p>
+                            <h2>498</h2><p>Following</p>
+                        </div>
+                        <div class="follower__actions">
+                            <button>Profile</button>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
