Start to Messaging Page

--- a/feed.html
+++ b/feed.html
@@ -22,7 +22,7 @@
             </div>
             <div class="nav__split">
                 <a href="profile.html"><i class="fa-regular fa-fw fa-user"></i></a>
-                <a href="feed.php"><i class="fa-regular fa-fw fa-message"></i></a>
+                <a href="messages.html"><i class="fa-regular fa-fw fa-message"></i></a>
                 <a href="feed.php"><i class="fa-solid fa-fw fa-arrow-right-from-bracket"></i></a>
                 <button class="dropdown" onclick="openMenu()">Menu</button>
             </div>
@@ -35,7 +35,7 @@
             <a href="#" onclick="closeMenu()"><i class="fa-regular fa-fw fa-compass nav__icon"></i>Explore</a>
             <a href="#" onclick="closeMenu()"><i class="fa-solid fa-fw fa-arrow-up-from-bracket nav__icon"></i>Upload</a>
             <a href="profile.html" onclick="closeMenu()"><i class="fa-regular fa-fw fa-user selected nav__icon"></i>Profile</a>
-            <a href="#" onclick="closeMenu()"><i class="fa-regular fa-fw fa-message nav__icon"></i>Messages</a>
+            <a href="messages.html" onclick="closeMenu()"><i class="fa-regular fa-fw fa-message nav__icon"></i>Messages</a>
             <a href="#" onclick="closeMenu()"><i class="fa-solid fa-fw fa-arrow-right-from-bracket nav__icon"></i>Sign Out</a>
         </div>
     </div>
