--- a/profile.html
+++ b/profile.html
@@ -23,7 +23,7 @@
             </div>
             <div class="nav__split right__icons">
                 <a href="profile.html"><i class="fa-regular fa-fw fa-user selected nav__icon"></i></a>
-                <a href="feed.php"><i class="fa-regular fa-fw fa-message nav__icon"></i></a>
+                <a href="messages.html"><i class="fa-regular fa-fw fa-message nav__icon"></i></a>
                 <a href="feed.php"><i class="fa-solid fa-fw fa-arrow-right-from-bracket nav__icon"></i></a>
                 <button class="dropdown" onclick="openMenu()">Menu</button>
             </div>
@@ -338,7 +338,7 @@
             <a href="#" onclick="closeMenu()"><i class="fa-regular fa-fw fa-compass nav__icon"></i>Explore</a>
             <a href="#" onclick="closeMenu()"><i class="fa-solid fa-fw fa-arrow-up-from-bracket nav__icon"></i>Upload</a>
             <a href="profile.html" onclick="closeMenu()"><i class="fa-regular fa-fw fa-user selected nav__icon"></i>Profile</a>
-            <a href="#" onclick="closeMenu()"><i class="fa-regular fa-fw fa-message nav__icon"></i>Messages</a>
+            <a href="messages.html" onclick="closeMenu()"><i class="fa-regular fa-fw fa-message nav__icon"></i>Messages</a>
             <a href="#" onclick="closeMenu()"><i class="fa-solid fa-fw fa-arrow-right-from-bracket nav__icon"></i>Sign Out</a>
         </div>
     </div>
