--- a/messages.html
+++ b/messages.html
@@ -42,6 +42,60 @@
                 <h1>Jamie Jones</h1>
                 <p>@James Jones</p>
               </div>
+
+              <div class="messages__user">
+                <img src="images\avatar2.jpg" id="preview__image" class="follower__avatar">
+                <h1>Jamie Jones</h1>
+                <p>@James Jones</p>
+              </div>
+
+              <div class="messages__user">
+                <img src="images\avatar2.jpg" id="preview__image" class="follower__avatar">
+                <h1>Jamie Jones</h1>
+                <p>@James Jones</p>
+              </div>
+
+              <div class="messages__user">
+                <img src="images\avatar2.jpg" id="preview__image" class="follower__avatar">
+                <h1>Jamie Jones</h1>
+                <p>@James Jones</p>
+              </div>
+
+              <div class="messages__user">
+                <img src="images\avatar2.jpg" id="preview__image" class="follower__avatar">
+                <h1>Jamie Jones</h1>
+                <p>@James Jones</p>
+              </div>
+
+              <div class="messages__user">
+                <img src="images\avatar2.jpg" id="preview__image" class="follower__avatar">
+                <h1>Jamie Jones</h1>
+                <p>@James Jones</p>
+              </div>
+
+              <div class="messages__user">
+                <img src="images\avatar2.jpg" id="preview__image" class="follower__avatar">
+                <h1>Jamie Jones</h1>
+                <p>@James Jones</p>
+              </div>
+
+              <div class="messages__user">
+                <img src="images\avatar2.jpg" id="preview__image" class="follower__avatar">
+                <h1>Jamie Jones</h1>
+                <p>@James Jones</p>
+              </div>
+
+              <div class="messages__user">
+                <img src="images\avatar2.jpg" id="preview__image" class="follower__avatar">
+                <h1>Jamie Jones</h1>
+                <p>@James Jones</p>
+              </div>
+
+              <div class="messages__user">
+                <img src="images\avatar2.jpg" id="preview__image" class="follower__avatar">
+                <h1>Jamie Jones</h1>
+                <p>@James Jones</p>
+              </div>
               
             </div>
             <div class="messages__chat">
