--- a/messages.html
+++ b/messages.html
@@ -13,7 +13,7 @@
     <div class="feed__container">
         <header class="website__nav"> 
             <div class="nav__split">
-				<a href="feed.html"><i class="fa-solid fa-fw fa-rss selected"></i></a>
+				<a href="feed.html"><i class="fa-solid fa-fw fa-rss"></i></a>
                 <a href="feed.php"><i class="fa-regular fa-fw fa-compass"></i></a>
                 <a href="feed.php"><i class="fa-solid fa-fw fa-arrow-up-from-bracket"></i></a>
             </div>
@@ -22,7 +22,7 @@
             </div>
             <div class="nav__split">
                 <a href="profile.html"><i class="fa-regular fa-fw fa-user"></i></a>
-                <a href="messages.html"><i class="fa-regular fa-fw fa-message"></i></a>
+                <a href="messages.html"><i class="fa-regular fa-fw fa-message selected"></i></a>
                 <a href="feed.php"><i class="fa-solid fa-fw fa-arrow-right-from-bracket"></i></a>
                 <button class="dropdown" onclick="openMenu()">Menu</button>
             </div>
@@ -139,8 +139,8 @@
             <a href="feed.html" onclick="closeMenu()"><i class="fa-solid fa-fw fa-rss nav__icon"></i>Feed</a>
             <a href="#" onclick="closeMenu()"><i class="fa-regular fa-fw fa-compass nav__icon"></i>Explore</a>
             <a href="#" onclick="closeMenu()"><i class="fa-solid fa-fw fa-arrow-up-from-bracket nav__icon"></i>Upload</a>
-            <a href="profile.html" onclick="closeMenu()"><i class="fa-regular fa-fw fa-user selected nav__icon"></i>Profile</a>
-            <a href="messages.html" onclick="closeMenu()"><i class="fa-regular fa-fw fa-message nav__icon"></i>Messages</a>
+            <a href="profile.html" onclick="closeMenu()"><i class="fa-regular fa-fw fa-user  nav__icon"></i>Profile</a>
+            <a href="messages.html" onclick="closeMenu()"><i class="fa-regular fa-fw fa-message selected nav__icon"></i>Messages</a>
             <a href="#" onclick="closeMenu()"><i class="fa-solid fa-fw fa-arrow-right-from-bracket nav__icon"></i>Sign Out</a>
         </div>
     </div>
