Some Changes b4 PHP conversion

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                     <label>Password</label>
                 </div>
                 <div class="login__submit">
-                    <a href="index.html"><button>Register</button></a>
                     <input type="submit" name="logSubmit" value="Login">
                 </div>
             </form>
+            <a href="register.html" class="login__submit"><button>Register</button></a>
         </div>    
         <div class="dev__buttons">
             <a href="index.html"><button>Sign in</button></a>
