--- a/messages.html
+++ b/messages.html
@@ -15,7 +15,7 @@
             <div class="nav__split">
 				<a href="feed.html"><i class="fa-solid fa-fw fa-rss"></i></a>
                 <a href="feed.php"><i class="fa-regular fa-fw fa-compass"></i></a>
-                <a href="feed.php"><i class="fa-solid fa-fw fa-arrow-up-from-bracket"></i></a>
+                <a href="upload.html"><i class="fa-solid fa-fw fa-arrow-up-from-bracket"></i></a>
             </div>
             <div class="nav__split">
                 <h1>PORT</h1>
@@ -138,7 +138,7 @@
         <div class="overlay__content">
             <a href="feed.html" onclick="closeMenu()"><i class="fa-solid fa-fw fa-rss nav__icon"></i>Feed</a>
             <a href="#" onclick="closeMenu()"><i class="fa-regular fa-fw fa-compass nav__icon"></i>Explore</a>
-            <a href="#" onclick="closeMenu()"><i class="fa-solid fa-fw fa-arrow-up-from-bracket nav__icon"></i>Upload</a>
+            <a href="upload.html" onclick="closeMenu()"><i class="fa-solid fa-fw fa-arrow-up-from-bracket nav__icon"></i>Upload</a>
             <a href="profile.html" onclick="closeMenu()"><i class="fa-regular fa-fw fa-user  nav__icon"></i>Profile</a>
             <a href="messages.html" onclick="closeMenu()"><i class="fa-regular fa-fw fa-message selected nav__icon"></i>Messages</a>
             <a href="#" onclick="closeMenu()"><i class="fa-solid fa-fw fa-arrow-right-from-bracket nav__icon"></i>Sign Out</a>
